--- a/pom.xml
+++ b/pom.xml
@@ -1,66 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.neo4j</groupId>
-    <artifactId>parent-pom</artifactId>
-    <version>6</version>
+    <artifactId>parent-central</artifactId>
+    <version>10</version>
   </parent>
 
-  <modelVersion>4.0.0</modelVersion>
   <groupId>org.neo4j</groupId>
   <artifactId>neo4j-admin-store</artifactId>
   <version>0.1-SNAPSHOT</version>
   <name>Neo4j - Admin native store</name>
-  <description>
-		A command shell for administrating a native store
-	</description>
-  <url>http://components.neo4j.org/${project.artifactId}/</url>
-
-  <properties>
-    <jline.version>0.9.94</jline.version>
-    <jta.version>1.1</jta.version>
-    <neo.version>1.0-SNAPSHOT</neo.version>
-    <bundle.namespace>org.neo4j.shell</bundle.namespace>
-  </properties>
-
-  <packaging>bundle</packaging>
-
-  <scm>
-    <connection>
-			scm:svn:https://svn.neo4j.org/components/shell/trunk/
-		</connection>
-    <url>https://trac.neo4j.org/browser/components/shell
-		</url>
-  </scm>
-
-  <issueManagement>
-    <system>Trac</system>
-    <url>https://trac.neo4j.org/query?status=assigned&amp;status=new&amp;status=reopened&amp;component=shell</url>
-  </issueManagement>
 
   <contributors>
     <contributor>
-      <name>Peter Neubauer</name>
-      <email>peter [at] neotechnology.com</email>
-      <organization>Neo Technology</organization>
-      <organizationUrl>http://www.neotechnology.com</organizationUrl>
-      <timezone>+1</timezone>
+      <name>Johan Svensson</name>
+      <email>johan [at] neotechnology.com</email>
     </contributor>
   </contributors>
   <developers>
     <developer>
-      <id>mattias</id>
-      <name>Mattias Persson</name>
-      <email>mattias [at] neotechnology.com</email>
-      <timezone>+1</timezone>
-      <roles>
-        <role>Developer</role>
-      </roles>
+      <name>Tobias Ivarsson</name>
+      <email>tobias.ivarsson [at] neotechnology.com</email>
     </developer>
   </developers>
 
-  <build>
+  <!-- build>
     <resources>
       <resource>
         <directory>src/bin</directory>
@@ -116,38 +82,23 @@
         </configuration>
       </plugin>
     </plugins>
-  </build>
+  </build -->
 
   <dependencies>
-    <!--
-      If you add the jLine library (at least version 0.9.94) to the
-      classpath of the client then you'll get enhanced prompt abilities.
-      Much like regular bash etc.
-    -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.1</version>
-      <scope>test</scope>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j</artifactId>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-shell</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
+      <version>1.2-1.2</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>jline</groupId>
-      <artifactId>jline</artifactId>
-      <version>${jline.version}</version>
-      <scope>compile</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
     </dependency>
-
   </dependencies>
 </project>
