--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.neo4j</groupId>
     <artifactId>parent-central</artifactId>
-    <version>10</version>
+    <version>18</version>
   </parent>
 
   <groupId>org.neo4j</groupId>
@@ -30,12 +30,12 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j</artifactId>
-      <version>1.2</version>
+      <version>1.3.M03</version>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-shell</artifactId>
-      <version>1.2-1.2</version>
+      <version>1.3.M03</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
