--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <artifactId>parent-central</artifactId>
     <version>18</version>
   </parent>
+  
+  <properties>
+    <neo4j-version>1.3.M03</neo4j-version>
+  </properties>
 
   <groupId>org.neo4j</groupId>
   <artifactId>neo4j-admin-store</artifactId>
@@ -30,12 +34,12 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j</artifactId>
-      <version>1.3.M03</version>
+      <version>${neo4j-version}</version>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-shell</artifactId>
-      <version>1.3.M03</version>
+      <version>${neo4j-version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
