--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,12 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j</artifactId>
-      <version>1.3.M03</version>
+      <version>1.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-shell</artifactId>
-      <version>1.3.M03</version>
+      <version>1.3-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
