--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   
   <properties>
     <neo4j-version>1.3-SNAPSHOT</neo4j-version>
+    <bundle.namespace>org.neo4j.admin</bundle.namespace>
   </properties>
 
   <groupId>org.neo4j</groupId>
