--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,7 @@
     <package tool="propstat"/>
     <package tool="makeshort"/>
     <package tool="graphviz"/>
+    <package tool="consistency"/>
   </target>
 
   <macrodef name="package">
@@ -41,6 +42,8 @@
                  includes="org/neo4j/kernel/impl/nioneo/store/*.class"/>
         <fileset dir="${target}/classes"
                  includes="org/neo4j/admin/tool/*.class"/>
+        <fileset dir="${target}/classes"
+                 includes="org/neo4j/admin/check/*.class"/>
         <fileset dir="${target}/classes"
                  includes="org/neo4j/admin/tool/@{tool}/*.class"/>
         <fileset dir="${resources}" includes="**/*"/>
