--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,7 @@
     <package tool="makeshort"/>
     <package tool="graphviz"/>
     <package tool="consistency"/>
+    <package tool="dumplog"/>
   </target>
 
   <macrodef name="package">
@@ -39,7 +40,7 @@
     <sequential>
       <jar destfile="${target}/@{tool}-${neo4j-version}.jar">
         <fileset dir="${target}/classes"
-                 includes="org/neo4j/kernel/impl/nioneo/store/*.class"/>
+                 includes="org/neo4j/kernel/**/*.class"/>
         <fileset dir="${target}/classes"
                  includes="org/neo4j/admin/tool/*.class"/>
         <fileset dir="${target}/classes"
