--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.neo4j</groupId>
+    <groupId>org.neo4j.build</groupId>
     <artifactId>parent-central</artifactId>
-    <version>22</version>
+    <version>25</version>
+    <relativePath />
   </parent>
   
   <properties>
